Add jvmArgs for CommandsV3
Fixes #812